--- a/vignettes/getting_started.Rmd
+++ b/vignettes/getting_started.Rmd
@@ -80,10 +80,10 @@ ames_rec <-
   step_ns(Latitude,  deg_free = tune("lat df"))
 ```
 
-The function `dials::param_set()` that can detect and collect the parameters that have been flagged for tuning:
+The function `dials::parameters()` that can detect and collect the parameters that have been flagged for tuning:
 
 ```{r p-set}
-param_set(ames_rec)
+parameters(ames_rec)
 ```
 
 The `dials` package has default ranges for many parameters. The generic parameter function for `deg_free` has a fairly small range:
@@ -103,7 +103,7 @@ The parameter objects can be easily changed using the `update()` function:
 ```{r updated}
 ames_param <- 
   ames_rec %>% 
-  param_set() %>% 
+  parameters() %>% 
   update(
     `long df` = spline_degree(), 
     `lat df` = spline_degree()
@@ -251,7 +251,7 @@ From this, the parameter set can be used to modify the range and values of param
 ```{r knn-set}
 knn_param <- 
   knn_wflow %>% 
-  param_set() %>% 
+  parameters() %>% 
     update(
     `long df` = spline_degree(c(2, 18)), 
     `lat df` = spline_degree(c(2, 18)),
