autoplot unit tests and pkgdown update

--- a/vignettes/extras/svm_classification.Rmd
+++ b/vignettes/extras/svm_classification.Rmd
@@ -152,5 +152,5 @@ estimates %>%
 A plot of the search can be created via:
 
 ```{r bo-plot}
-plot_perf_vs_iter(search_res)
+autoplot(search_res, type = "performance")
 ```
