--- a/vignettes/getting_started.Rmd
+++ b/vignettes/getting_started.Rmd
@@ -273,9 +273,9 @@ Although no grid is required, the process requires a few additional pieces of in
 The code to conduct the search is: 
 
 ```{r bo, cache = TRUE}
-ctrl <- ctrl_Bayes(verbose = TRUE)
+ctrl <- ctrl_bayes(verbose = TRUE)
 set.seed(8154)
-knn_search <- tune_Bayes(knn_wflow, resamples = cv_splits, initial = 5, iter = 20,
+knn_search <- tune_bayes(knn_wflow, resamples = cv_splits, initial = 5, iter = 20,
                          param_info = knn_param, control = ctrl)
 ```
 
