--- a/vignettes/extras/text_analysis.Rmd
+++ b/vignettes/extras/text_analysis.Rmd
@@ -190,7 +190,7 @@ This took a while to complete. What did the results look like? Let's get the res
 
 ```{r grid-roc}
 grid_roc <- 
-  estimate(five_star_glmnet) %>% 
+  collect_metrics(five_star_glmnet) %>% 
   arrange(desc(mean))
 grid_roc
 ```
