--- a/vignettes/extras/svm_classification.Rmd
+++ b/vignettes/extras/svm_classification.Rmd
@@ -20,6 +20,7 @@ library(tune)
 library(kernlab)
 library(crayon)
 library(rlang)
+library(workflows)
 
 theme_set(theme_bw())
 
@@ -77,6 +78,8 @@ svm_mod <-
 These two objects will be combined into a single object via the `workflow()` function and this object will be used to fuel the optimization process. 
 
 ```{r workflow}
+library(workflows) 
+
 svm_wflow <-
   workflow() %>%
   add_model(svm_mod) %>%
