--- a/vignettes/extras/text_analysis.Rmd
+++ b/vignettes/extras/text_analysis.Rmd
@@ -165,8 +165,10 @@ For illustration, we will save information on the number of predictors by penalt
 
 ```{r extract}
 glmnet_vars <- function(x) {
+  # `x` will be a workflow object
+  mod <- extract_model(x)
   # `df` is the number of model terms for each penalty value
-  tibble(penalty = x$model$lambda, num_vars = x$model$df)
+  tibble(penalty = mod$lambda, num_vars = mod$df)
 }
 
 ctrl <- control_grid(extract = glmnet_vars)
