--- a/README.Rmd
+++ b/README.Rmd
@@ -15,10 +15,10 @@ knitr::opts_chunk$set(
 # tune
 
 <!-- badges: start -->
-[![Travis build status](https://travis-ci.org/tidymodels/tune.svg?branch=master)](https://travis-ci.org/tidymodels/tune)
-[![R build status](https://github.com/tidymodels/tune/workflows/R/badge.svg)](https://github.com/tidymodels/tune/actions?workflow=R-full)
+[![R build status](https://github.com/tidymodels/tune/workflows/R-CMD-check/badge.svg)](https://github.com/tidymodels/tune)
 [![Codecov test coverage](https://codecov.io/gh/tidymodels/tune/branch/master/graph/badge.svg)](https://codecov.io/gh/tidymodels/tune?branch=master)
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
+
 <!-- badges: end -->
 
 The goal of tune is to facilitate the tuning of hyper-parameters the tidymodels packages. It replies heavily on `recipes`, `parsnip`, and `dials`. 
