Refactor arguments for *all* tune_ and fitting functions, to better align with parsnip's fit()

--- a/vignettes/getting_started.Rmd
+++ b/vignettes/getting_started.Rmd
@@ -161,7 +161,7 @@ The root mean squared error will be used to measure performance (and this is the
 Using these objects, `tune_grid()` can be used^[A simple R model formula could have been used here, such as `log10(Sale_Price) ~ Longitude + Latitude`. A recipe is not required.]:
 
 ```{r grid-search, cache = TRUE}
-ames_res <- tune_grid(ames_rec, model = lm_mod, resamples = cv_splits, grid = spline_grid)
+ames_res <- tune_grid(lm_mod, ames_rec, resamples = cv_splits, grid = spline_grid)
 ```
 
 The object is similar to the `rsample` object but with one or more extra columns:
