--- a/vignettes/extras/text_analysis.Rmd
+++ b/vignettes/extras/text_analysis.Rmd
@@ -183,7 +183,7 @@ roc_scores <- metric_set(roc_auc)
 
 set.seed(1559)
 five_star_glmnet <- 
-  tune_grid(pre_proc, lr_mod, resamples = folds, grid = five_star_grid, 
+  tune_grid(lr_mod, pre_proc, resamples = folds, grid = five_star_grid, 
             metrics = roc_scores, control = ctrl)
 ```
 
