--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,8 @@ knitr::opts_chunk$set(
   out.width = "100%"
 )
 ```
-# tune
+
+# tune <a href='https://tune.tidymodels.org'><img src='man/figures/logo.png' align="right" height="139" /></a>
 
 <!-- badges: start -->
 [![R build status](https://github.com/tidymodels/tune/workflows/R-CMD-check/badge.svg)](https://github.com/tidymodels/tune/actions)
@@ -23,7 +24,7 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-The goal of tune is to facilitate the tuning of hyper-parameters the tidymodels packages. It relies heavily on `recipes`, `parsnip`, and `dials`. 
+The goal of tune is to facilitate hyperparameter tuning for the tidymodels packages. It relies heavily on [recipes](https://recipes.tidymodels.org/), [parsnip](https://parsnip.tidymodels.org/), and [dials](https://dials.tidymodels.org/). 
 
 ## Installation
 
@@ -41,13 +42,20 @@ devtools::install_github("tidymodels/tune")
 
 ## Examples
 
-There are a few package vignettes, the first being the [_Getting Started_](https://tidymodels.github.io/tune/articles/getting_started.html) document. Other examples resources:
+There are several package vignettes, as well as articles available at [tidymodels.org](https://www.tidymodels.org/), demonstrating how to use tune.
 
- - [basic grid search](https://tidymodels.github.io/tune/articles/grid.html)
- - [Bayesian optimization example](https://tidymodels.github.io/tune/articles/extras/svm_classification.html)
- - [an advanced text mining example](https://tidymodels.github.io/tune/articles/extras/text_analysis.html)
- - [notes on optimizations and parallel processing](https://tidymodels.github.io/tune/articles/extras/optimizations.html)
- - [details on acquisition function for scoring parameter combinations](https://tidymodels.github.io/tune/articles/acquisition_functions.html)
+Good places to begin include:
+
+- [Getting started with cell segmentation data](https://www.tidymodels.org/start/tuning/)
+- [Getting started with Ames housing data](https://tune.tidymodels.org/articles/getting_started.html)
+
+More advanced resources available are:
+
+ - [Basic grid search for an SVM model](https://www.tidymodels.org/learn/work/tune-svm/)
+ - [Iterative Bayesian optimization of a classification model](https://www.tidymodels.org/learn/work/bayes-opt/)
+ - [Advanced text mining example](https://tune.tidymodels.org/articles/extras/text_analysis.html)
+ - [Notes on optimizations and parallel processing](https://tune.tidymodels.org/articles/extras/optimizations.html)
+ - [Details on acquisition function for scoring parameter combinations](https://tune.tidymodels.org/articles/acquisition_functions.html)
  
 
  
