Update contributing section (#237)
* Add code of conduct

* Update README for contributing section

* More clarity for link

--- a/README.Rmd
+++ b/README.Rmd
@@ -34,7 +34,7 @@ Install from CRAN:
 install.packages("tune", repos = "http://cran.r-project.org") #or your local mirror
 ```
 
-or you can install the current development version using
+or you can install the current development version using:
 
 ```r
 devtools::install_github("tidymodels/tune")
@@ -58,4 +58,15 @@ More advanced resources available are:
  - [Details on acquisition function for scoring parameter combinations](https://tune.tidymodels.org/articles/acquisition_functions.html)
  
 
- 
+## Contributing
+
+This project is released with a [Contributor Code of Conduct](https://contributor-covenant.org/version/2/0/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
+
+- For questions and discussions about tidymodels packages, modeling, and machine learning, please [post on RStudio Community](https://rstd.io/tidymodels-community).
+
+- If you think you have encountered a bug, please [submit an issue](https://github.com/tidymodels/tune/issues).
+
+- Either way, learn how to create and share a [reprex](https://rstd.io/reprex) (a minimal, reproducible example), to clearly communicate about your code.
+
+- Check out further details on [contributing guidelines for tidymodels packages](https://www.tidymodels.org/contribute/) and [how to get help](https://www.tidymodels.org/help/).
+
